--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -8,7 +8,7 @@
       </div>
       <p><%= "#{group.created_at.day} #{group.created_at.strftime("%b")} #{group.created_at.year}" %></p>
       <ul class = "group_actions">
-        <li><%= link_to "View Transactions", group_actions_path(group), class: 'btn btn-primary button' %></li>
+        <li><%= link_to "View Transactions", group_records_path(group), class: 'btn btn-primary button' %></li>
         <li><%= button_to "Remove", group_path(group), data: {
         confirm: "Are you sure you want to delete: #{group.name}?",
       }, method: :delete, class: 'btn btn-primary button', id: "remove_btn-#{group.id}" %></li>
