--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -4,20 +4,24 @@
 </div>
 
 <div class = "transactions_container">
-  <% @actions.each do |action| %>
+  <% @records.each do |record| %>
     <div class = "transaction_details">
       <div class = "transaction">
       <img src="https://png.pngtree.com/png-vector/20190130/ourlarge/pngtree-various-goods-and-cars-png-image_643136.jpg" />
-        <h2><%= action.name %></h2>
-        <h3>$<%= action.amount %></h3>
+        <h2><%= record.name %></h2>
+        <h3>$<%= record.amount %></h3>
       </div>
-      <p><%= "#{action.created_at.day} #{action.created_at.strftime("%b")} #{action.created_at.year}" %></p>
+      <p><%= "#{record.created_at.day} #{record.created_at.strftime("%b")} #{record.created_at.year}" %></p>
     </div>
   <% end %>
 
-  <% if @actions.empty? %>
+  <% if @records.empty? %>
     <div class="no_content">
       <p>No transactions available yet!</p>
     </div>
   <% end %>
+</div>
+
+<div class="category_btn">
+    <%= link_to 'Add New Transaction', new_group_record_path(@group), class: 'btn btn-success' %>
 </div>
