Added splash screen, created and styled navigation, added nav to forms

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/navbar', title: "#{@groups.name}", back_link: false %>
 <div class = "groups_container">
   <% @groups.each do |group| %>
     <div class =  "group">
