--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/navbar', back_link: groups_path, title: "New Group" %>
+
 <%= form_with(model: @group, method: :post) do |form| %>
 <h1 class="text-center mb-3 form_title">Add a new Group</h1>
 
