--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/navbar', title: "#{@records.name}", back_link: groups_path %>
+
 <div class = "transaction_group">
   <h2><%= @group.name %></h2>
   <h2>$<%= @group.total_amount %></h2>
