--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/navbar', back_link: group_records_path, title: "New Transaction" %>
+
 <%= form_with model: [@group, @record] do |form| %>
   <h1 class="text-center mb-3 form_title">Add a new Transaction</h1>
 
