--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -24,6 +24,6 @@
   <% end %>
 </div>
 
-<div class="category_btn">
-    <%= link_to 'Add New Transaction', new_group_record_path(@group), class: 'btn btn-success' %>
+<div class="group_btn">
+    <%= link_to 'Add New Transaction', new_group_record_path(@group), class: 'add-btn' %>
 </div>
