--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,17 +1,18 @@
 <%= render 'shared/navbar', back_link: groups_path, title: "New Group" %>
 
-<%= form_with(model: @group, method: :post) do |form| %>
-<h1 class="text-center mb-3 form_title">Add a new Group</h1>
-
-<div class="mb-3">
+<%= form_with(model: @group, method: :post, class:"add-form") do |form| %>
+<h1 class="form-title">Add a new Group</h1>
+<div class="form-fields">
+<div class="field">
   <%= form.label :name, class: "form-label" %>
   <%= form.text_field :name, class: "form-control", placeholder: "Name of group" %>
 </div>
 
-<div class="mb-3">
+<div class="field">
   <%=form.label :icon, class: "form-label"%>
   <%=form.url_field :icon, class: "form-control", placeholder: "url" %>
 </div>
+</div>
 
-<%=form.submit "Save", class: 'btn btn-primary' %>
+<%=form.submit "Save", class: 'submit-btn' %>
 <%end%>
