--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,22 +1,24 @@
 <%= render 'shared/navbar', back_link: group_records_path, title: "New Transaction" %>
 
-<%= form_with model: [@group, @record] do |form| %>
-  <h1 class="text-center mb-3 form_title">Add a new Transaction</h1>
+<%= form_with model: [@group, @record], class:"add-form" do |form| %>
+  <h1 class="form_title">Add a new Transaction</h1>
 
-  <div class="mb-3">
+<div class="form-fields">
+  <div class="field">
     <%= form.label :name, class: "form-label" %>
     <%= form.text_field :name, class: "form-control" %>
   </div>
 
-  <div class="mb-3">
+  <div class="field">
     <%= form.label :amount, class: "form-label" %>
     <%= form.number_field :amount, class: "form-control" %>
   </div>
 
-  <div class="mb-3">
+  <div class="field">
     <%= form.label :group_ids, class: "form-label" %>
     <%= form.collection_select :group_ids, Group.all, :id, :name, {}, class: "form-select" %>
   </div>
+  </div>
 
-  <%= form.submit "Save", class: "btn btn-primary" %>
+  <%= form.submit "Save", class: "submit-btn" %>
 <% end %>
