--- a/app/views/splash/splash.html.erb
+++ b/app/views/splash/splash.html.erb
@@ -3,6 +3,6 @@
 </div>
 
 <div class = "registration_container">
-  <%= link_to 'SIGN UP', new_user_registration_path, class: 'btn btn-primary' %>
-  <%= link_to 'LOG IN', new_user_session_path, class: 'btn btn-secondary' %>
+  <%= link_to 'SIGN UP', new_user_registration_path, class: 'btn' %>
+  <%= link_to 'LOG IN', new_user_session_path, class: 'btn' %>
 </div>
