--- a/app/assets/stylesheets/record.css
+++ b/app/assets/stylesheets/record.css
@@ -17,9 +17,15 @@
 
 .transaction {
   display: flex;
-  flex-direction: column;
   align-items: center;
   gap: 10px;
+}
+
+.text-records {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .transaction img {
@@ -32,6 +38,7 @@
 .transaction h2 {
   font-size: 1.2rem;
   margin-bottom: 5px;
+  opacity: 0.5;
 }
 
 .transaction h3 {
@@ -44,6 +51,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 /* Date */
@@ -51,6 +59,13 @@
   font-size: 0.9rem;
   text-align: center;
   margin-top: 10px;
+  width: fit-content;
+  margin-left: 90px;
+  opacity: 0.5;
+}
+
+.records-body {
+  background-color: lightgray;
 }
 
 /* Add New Transaction button */
@@ -66,6 +81,14 @@
   padding: 10px;
   width: 90%;
   background-color: #23c80a;
+}
+
+.alert {
+  color: red;
+}
+
+.notice {
+  color: green;
 }
 
 /* Desktop Styles */
