--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -1,7 +1,21 @@
+.main-container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
 .container {
   max-width: 960px;
   margin: 0 auto;
   padding: 20px;
+  position: absolute;
+  width: 100%;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /* Splash Screen styles */
@@ -18,11 +32,15 @@
 /* Registration Container styles */
 .registration_container {
   display: flex;
+  flex-direction: column;
+  margin-top: 80px;
   justify-content: center;
-  margin-top: 50px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
-.registration_container .btn {
+.btn {
   margin: 0 10px;
   padding: 12px 24px;
   font-size: 18px;
@@ -31,17 +49,24 @@
   color: #fff;
   background-color: #007bff;
   border: none;
-  border-radius: 4px;
+
+  /* border-radius: 4px; */
   cursor: pointer;
   transition: background-color 0.3s ease;
+  text-align: center;
 }
 
 .registration_container .btn:hover {
   background-color: #0056b3;
 }
 
+.splash-login {
+  background-color: transparent;
+  color: #000;
+}
+
 /* Responsive adjustments */
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .splash_screen h1 {
     font-size: 28px;
   }
