--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -8,10 +8,12 @@
 <div class = "transactions_container">
   <% @records.each do |record| %>
     <div class = "transaction_details">
-      <div class = "transaction">
+      <div class = "transaction  details_container">
       <img src="https://png.pngtree.com/png-vector/20190130/ourlarge/pngtree-various-goods-and-cars-png-image_643136.jpg" />
+      <div class="text-records">
         <h2><%= record.name %></h2>
         <h3>$<%= record.amount %></h3>
+        </div>
       </div>
       <p><%= "#{record.created_at.day} #{record.created_at.strftime("%b")} #{record.created_at.year}" %></p>
     </div>
